# STM32L4R9AII6_TEMPLATE

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32L4R9AII6_TEMPLATE.ioc  openocd.cfg
Bsp/communication/: ascii_processor.cpp  ascii_processor.hpp  communication.cpp  communication.hpp  interface_uart.cpp  interface_uart.hpp  interface_usb.cpp  interface_usb.hpp
Bsp/utils/: time_utils.c  time_utils.h  timer.cpp  timer.hpp
Bsp/utils/arm_math/: arm_math.h
Core/Inc/: FreeRTOSConfig.h  dma.h  fmc.h  gpio.h  i2c.h  main.h  sai.h  sdmmc.h  spi.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  usart.h  usb_otg.h
Core/Src/: dma.c  fmc.c  freertos.c  gpio.c  i2c.c  main.c  sai.c  sdmmc.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  system_stm32l4xx.c  tim.c  usart.c  usb_otg.c
Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l4r9xx.h  stm32l4xx.h  system_stm32l4xx.h
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal.h  stm32l4xx_hal_cortex.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_exti.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_flash_ex.h  stm32l4xx_hal_flash_ramfunc.h  stm32l4xx_hal_gpio.h  stm32l4xx_hal_gpio_ex.h  stm32l4xx_hal_i2c.h  stm32l4xx_hal_i2c_ex.h  stm32l4xx_hal_pcd.h  stm32l4xx_hal_pcd_ex.h  stm32l4xx_hal_pwr.h  stm32l4xx_hal_pwr_ex.h  stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.h  stm32l4xx_hal_sai.h  stm32l4xx_hal_sai_ex.h  stm32l4xx_hal_sd.h  stm32l4xx_hal_sd_ex.h  stm32l4xx_hal_spi.h  stm32l4xx_hal_spi_ex.h  stm32l4xx_hal_sram.h  stm32l4xx_hal_tim.h  stm32l4xx_hal_tim_ex.h  stm32l4xx_hal_uart.h  stm32l4xx_hal_uart_ex.h  stm32l4xx_ll_bus.h  stm32l4xx_ll_cortex.h  stm32l4xx_ll_crs.h  stm32l4xx_ll_dma.h  stm32l4xx_ll_dmamux.h  stm32l4xx_ll_exti.h  stm32l4xx_ll_fmc.h  stm32l4xx_ll_gpio.h  stm32l4xx_ll_i2c.h  stm32l4xx_ll_lpuart.h  (+8 more)
Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c  stm32l4xx_hal_cortex.c  stm32l4xx_hal_dma.c  stm32l4xx_hal_dma_ex.c  stm32l4xx_hal_exti.c  stm32l4xx_hal_flash.c  stm32l4xx_hal_flash_ex.c  stm32l4xx_hal_flash_ramfunc.c  stm32l4xx_hal_gpio.c  stm32l4xx_hal_i2c.c  stm32l4xx_hal_i2c_ex.c  stm32l4xx_hal_pcd.c  stm32l4xx_hal_pcd_ex.c  stm32l4xx_hal_pwr.c  stm32l4xx_hal_pwr_ex.c  stm32l4xx_hal_rcc.c  stm32l4xx_hal_rcc_ex.c  stm32l4xx_hal_sai.c  stm32l4xx_hal_sai_ex.c  stm32l4xx_hal_sd.c  stm32l4xx_hal_sd_ex.c  stm32l4xx_hal_spi.c  stm32l4xx_hal_spi_ex.c  stm32l4xx_hal_sram.c  stm32l4xx_hal_tim.c  stm32l4xx_hal_tim_ex.c  stm32l4xx_hal_uart.c  stm32l4xx_hal_uart_ex.c  stm32l4xx_ll_fmc.c  stm32l4xx_ll_sdmmc.c  stm32l4xx_ll_usb.c
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
Robot/Instances/Inc/: robot.hpp
Robot/Instances/Src/: robot.cpp
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
UserApp/: common_inc.h  freertos_inc.h  main.cpp
UserApp/Protocols/: ascii_protocol.cpp  cmd_protocol.cpp
